tests/diagnostics/unknown_char.kal
# '@' is not a valid token in Kal.
1 + @ 2;
